Se ordena y formatea el código

--- a/proyecto_1/makefile
+++ b/proyecto_1/makefile
@@ -1,12 +1,12 @@
-OBJECTS=test.c
-OUTPUT=test
+OBJECTS=proyecto_1.o
+OUTPUT=proyecto_1
 
 LDLIBS=-lX11 -lglut -lGLU -lGL -lm
 
 $(OUTPUT): $(OBJECTS)
-	cc -o $(OUTPUT) $(OBJECTS) $(LDLIBS)
+	cc $(CFLAGS) $(LDFLAGS) $(LDLIBS) -o $(OUTPUT) $(OBJECTS)
 
-$(OBJECTS): test.c
+$(OBJECTS): proyecto_1.h
 
 clean:
 	rm -f *.o
