--- a/proyecto_1/makefile
+++ b/proyecto_1/makefile
@@ -1,13 +1,13 @@
 OBJECTS=proyecto_1.o
 OUTPUT=proyecto_1
 
-LDLIBS=-lX11 -lglut -lGLU -lGL -lm
+LDLIBS=-lX11 -lglut -lGLU -lGL -lm -lIL
 
 $(OUTPUT): $(OBJECTS)
-	cc $(CFLAGS) $(LDFLAGS) $(LDLIBS) -o $(OUTPUT) $(OBJECTS)
+	cc -o $(OUTPUT) $(OBJECTS) $(LDLIBS) 
 
 $(OBJECTS): proyecto_1.h
 
 clean:
 	rm -f *.o
-	rm -f test
+	rm -f proyecto_1
